api-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: retraced
        tier: api
    spec:
      containers:
        - name: api
          image: quay.io/retracedhq/api:2f88d8a
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: quayio
