app-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: retraced
        tier: app
    spec:
      containers:
        - name: app
          image: quay.io/retracedhq/app:ee1ce67-stg
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: quayio
