cron-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: scheduler
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: retraced
        tier: processor
    spec:
      containers:
        - name: processor
          image: quay.io/retracedhq/processor:e4550b2
          command: ["./bin/processor"]
          args: ["cron"]
      imagePullSecrets:
        - name: quayio
