processor-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: processor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: retraced
        tier: processor
    spec:
      containers:
        - name: processor
          image: quay.io/retracedhq/processor:08395e7
          volumeMounts:
            - name: config
              mountPath: /home/retraced/retraced-processor/config
              readOnly: true
      imagePullSecrets:
        - name: quayio
      volumes:
        - name: config
          secret:
            secretName: processor-config
