tls_refresher-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tls-refresher
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: retraced
        tier: tls-refresher
    spec:
      imagePullSecrets:
        - name: quayio
      volumes:
        - name: fs-secrets
          secret:
            secretName: tls-refresher
            items:
              - key: DOMAINS_TXT
                path: domains.txt
      containers:
        - name: tls-refresher
          image: quay.io/retracedhq/tls_refresher:0123456
          volumeMounts:
            - name: fs-secrets
              mountPath: /opt/tls_refresher/secrets
              readOnly: true
