vault-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vault
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: retraced
        tier: vault
    spec: 
    volumes:
      - name: vault-disk
        gcePersistentDisk:
          pdName: vault
          fsType: ext4
      containers:
        - name: vault
          image: vault
          command: ["server"]
          ports:
            - name: main
              containerPort: 8200
          volumeMounts:
            - name: vault-disk
              mountPath: /vault/file
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
