www-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: www
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: retraced
        tier: www
    spec:
      containers:
        - name: www
          image: quay.io/retracedhq/www:fed410c-stg
          ports:
            - name: main
              containerPort: 8099
      imagePullSecrets:
        - name: quayio
