api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: retraced
    tier: api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: retraced
    tier: api
---
