logs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: logs
  labels:
    app: retraced
    tier: logs
spec:
  type: NodePort
  ports:
  - name: svcmain
    port: 80
    targetPort: 80
  selector:
    app: retraced
    tier: logs
