www-service.yml
apiVersion: v1
kind: Service
metadata:
  name: www
  labels:
    app: retraced
    tier: www
spec:
  type: NodePort
  ports:
  - name: svcmain
    port: 12340
    targetPort: main
  selector:
    app: retraced
    tier: www
