api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"  
spec:
  tls:
    - secretName: api-keys
  backend:
    serviceName: api
    servicePort: 80
