app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress  
spec:
  tls:
    - secretName: app-tls
  backend:
    serviceName: app
    servicePort: 80
