logs-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logs-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - secretName: logs-keys
  backend:
    serviceName: logs
    servicePort: 80
